--- a/burn classification.ipynb
+++ b/burn classification.ipynb
@@ -359,6 +359,8 @@
     "model.add(Conv2D(64,(3,3),padding=\"same\",activation=\"relu\"))\n",
     "model.add(Conv2D(64,(3,3),padding=\"same\",activation=\"relu\"))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2), strides=2, padding=\"same\"))\n",
+    "model.add(Conv2D(128,(3,3),padding=\"same\",activation=\"relu\"))\n",
+    "model.add(Conv2D(128,(3,3),padding=\"same\",activation=\"relu\"))\n",
     "\n",
     "model.add(Flatten())\n",
     "\n",
